crates/obzenflow_adapters/tests/ui/breaker_builder/materialization_context_constructor_private.rs
// SPDX-License-Identifier: MIT OR Apache-2.0
// SPDX-FileCopyrightText: 2025-2026 ObzenFlow Contributors
// https://obzenflow.dev

use obzenflow_adapters::middleware::MiddlewareMaterializationContext;

fn main() {
    let _constructor = MiddlewareMaterializationContext::new;
}
